# httpdomain

./: .gitignore  .readthedocs.yaml  .travis.yml  CHANGELOG.rst  CONTRIBUTING.md  MANIFEST.in  Makefile  README.rst  RELEASE.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: tests.yml
doc/: Makefile  autobottle_sampleapp.py  autotornado_sampleapp.py  changelog.rst  conf.py  index.rst  rtd-requires.txt
docs/: autoflask_sampleapp.py  conf.py  index.rst
sphinxcontrib/: httpdomain.py
sphinxcontrib/autohttp/: __init__.py  bottle.py  common.py  drf.py  flask.py  flask_base.py  flaskqref.py  tornado.py
sphinxcontrib/httpdomain/: __init__.py
sphinxcontrib/locale/: httpdomain.pot
sphinxcontrib/locale/es_ES/LC_MESSAGES/: httpdomain.mo  httpdomain.po
sphinxcontrib/locale/fr_FR/LC_MESSAGES/: httpdomain.mo  httpdomain.po
src/sphinxcontrib/autohttp/: bottle.py
src/sphinxcontrib/httpdomain/: __init__.py
src/sphinxcontrib/locale/es_ES/LC_MESSAGES/: httpdomain.mo  httpdomain.po
src/sphinxcontrib/locale/fr_FR/LC_MESSAGES/: httpdomain.mo  httpdomain.po
test/: autoflask_methodview.py  bottle_test.py  index.rst
