[project]
name = "sphinxcontrib-httpdomain"
version = "2.0.0a4"
description = "Sphinx extension that provides a domain for documenting HTTP APIs."
keywords = [
  "Sphinx",
  "extension",
  "documentation",
  "contrib",
  "HTTP",
  "API",
  "domain",
]
readme = "README.rst"
license = "BSD-2-Clause"
license-files = ["LICENSE"]
maintainers = [
  { name = "Steve Piercy", email = "spiercy@plone.org" },
  { name = "Adam Turner"},
]
authors = [
  { name = "Hong Minhee", email = 'Hong Minhee <\x68\x6f\x6e\x67.minhee@\x67\x6d\x61\x69\x6c.com>' },
  { name = "Ash Berlin-Taylor", email = "Ash Berlin-Taylor <ash_github@firemirror.com>" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Framework :: Sphinx :: Domain",
    "Framework :: Sphinx :: Extension",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Documentation",
    "Topic :: Utilities",
]
requires-python = ">=3.10"
dependencies = [
    "sphinx>=6.0",
]


[project.urls]
Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"
Documentation = "https://sphinxcontrib-httpdomain.readthedocs.io/en/stable/"
Download ="https://pypi.org/project/sphinxcontrib-httpdomain/"
Funding = "https://github.com/sponsors/stevepiercy"
Homepage = "https://github.com/sphinx-contrib/httpdomain"
Issues = "https://github.com/sphinx-contrib/httpdomain/issues"
# TODO: Releasenotes = ""
Repository = "https://github.com/sphinx-contrib/httpdomain"


[dependency-groups]
dev = [
    "bottle>=0.13.4",
    "flask>=3.1.2",
    "pytest>=9.0.2",
    "sphinx-autobuild>=2024.10.3",
    "tornado>=6.5.4",
]


[build-system]
requires = ["uv_build >= 0.9.26, <0.10.0"]
build-backend = "uv_build"


[tool.uv]
python-preference = "managed"


[tool.uv.build-backend]
namespace = true
module-name = "sphinxcontrib"
